1.2.4b6:
    Checks & Agents:
    * 0321 brocade_mlx: enhancing checks (BR-MLX modules, more OK states)...
    * 0432 FIX: stulz_humidity: Fixed syntax error...


1.2.4b5:
    Checks & Agents:
    * 0077 cmciii.psm_current, cmciii_psm_plugs, cmciii_io, cmciii.access, cmciii.temp, cmciii.can_current, cmciii.sensor, cmciii.state: new sub checks included in one new check cmcmiii superseding and improving several previous checks of the Rittal CMCIII device...
            NOTE: Please refer to the migration notes!
    * 0116 FIX: cisco_vpn_tunnel: Fixed typo who leads to an exception
    * 0118 FIX: stulz_humidity: Fixed coloring in pnp template...
    * 0119 FIX: stulz_humidity: Fixed lower thresholds...
    * 0255 FIX: windows_agent: now able to handle the removal of local/plugin scripts during runtime...
    * 0447 FIX: fortigate_memory: Fix inventory, do not add check if no info available...
    * 0567 FIX: apc_symmetra: transformation from old tuple to new dict format fixed and improved

    Multisite:
    * 0117 FIX: Availability button is now visible for users without the right to edit views
    * 0431 FIX: LDAP: Fixed group synchronisation when nested group sync is enabled

    WATO:
    * 0256 FIX: wato snapshots: snapshot restore no longer fails with older python versions...


1.2.4b4:
    Core & Setup:
    * 0401 FIX: Fix rule precedence in WATO-configured manual checks...
    * 0402 FIX: Fix exception in case of missing agent sections of cluster-aware checks...
    * 0426 FIX: Fixed processing of cached agent plugins / local scripts...

    Checks & Agents:
    * 0254 agent_vsphere: Make handling of spaces in hostnames of ESX configurable...
    * 0251 FIX: agent_vsphere / check_mk agent: fixed outdated systemtime of check_mk agent...
    * 0439 FIX: postfix_mailq: Linux agent better detects Postfix installation...
    * 0440 FIX: heartbeat_crm: Inventory more gracefully handles case where agent output is invalid...