@@ -8749,6 +8749,12 @@ def page_automation():
     if secret != get_login_secret():
         raise MKAuthException(_("Invalid automation secret."))
 
+    # To prevent mixups in written files we use the same lock here as for
+    # the normal WATO page processing. This might not be needed for some
+    # special automation requests, like inventory e.g., but to keep it simple,
+    # we request the lock in all cases.
+    lock_exclusive()
+
     # Initialise g_root_folder, load all folder information
     prepare_folder_info()
 
